test/data/resolver/valid/returns_all_with_edge.cypher
MATCH (a:Person)-[r:AUTHORED]->(b:Post) RETURN *
