test/data/resolver/invalid/create_unknown_edge.cypher
CREATE (a:Person)-[r:UNKNOWN]->(b:Post)
